# randam_icon

./: .gitignore  README.md
randam_icon/: Cargo.toml  Dockerfile
randam_icon/src/: main.rs
randam_icon/src/ver3_create_api/: main.rs
randam_icon/src/ver4_output_log/: main.rs
random_icon/: format.sh
random_icon/src/: main.rs
random_icon/src/ver1_make_icon/: main.rs
yaml/: create_namespace.yaml  deployment.yaml  service.yaml
