[package]
name = "randam_icon"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
rand = "0.8"
actix-web = "4"
log = "0.4"
flexi_logger = "0.22"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"